terraform/talos-cluster/resources/longhorn/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn-webui-gateway
  namespace: longhorn-system
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "longhorn.nguyenvietkhoi.io.vn"
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "longhorn.nguyenvietkhoi.io.vn"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: longhorn-webui-gateway-certificate-secret
